--- a/.github/workflows/test-1.yml
+++ b/.github/workflows/test-1.yml
@@ -1,24 +1,14 @@
-name: Events Demo
+name: myworkflow # workflow name
 on: [push, workflow_dispatch] #event - trigger
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  first-job:
+    runs-on: ubuntu-latest #runner
     steps:
-      - name: Output event data
-        run: echo "${{ toJSON(github.event) }}"
+      - name: print welcome
+        run: echo "Hello, world"
 
-      - name: Get code
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Test code
-        run: npm run test
-
-      - name: Build code
-        run: npm run build
-
-      - name: Deploy project
-        run: echo "Deploying..."
+      - name: print Goodbye
+        run: |
+          echo "byebye",
+          echo "section1"
