chore: update Angular dependencies to version 21.0.x & add new job

--- a/.github/workflows/test-1.yml
+++ b/.github/workflows/test-1.yml
@@ -12,3 +12,8 @@ jobs:
         run: |
           echo "byebye",
           echo "section1"
+  second-job:
+    runs-on: ubuntu-latest #runner
+    steps:
+      - name: print welcome
+        run: echo "${{ toJson(github) }}"
