refactor: enhance test command with additional flags for better performance

--- a/.github/workflows/test-1.yml
+++ b/.github/workflows/test-1.yml
@@ -15,7 +15,7 @@ jobs:
         run: npm ci
 
       - name: Test code
-        run: npm  test
+        run: npm test -- --no-watch --no-progress --browsers=ChromeHeadless
 
       - name: Build code
         run: npm  build
