--- a/.github/workflows/test-1.yml
+++ b/.github/workflows/test-1.yml
@@ -18,4 +18,4 @@ jobs:
         run: npm test -- --no-watch --no-progress --browsers=ChromeHeadless
 
       - name: Build code
-        run: npm  build
+        run: ng build
