fix: remove unnecessary flags from test command and ensure build command uses npm

--- a/.github/workflows/test-1.yml
+++ b/.github/workflows/test-1.yml
@@ -15,7 +15,7 @@ jobs:
         run: npm ci
 
       - name: Test code
-        run: npm test -- --no-watch --no-progress --browsers=ChromeHeadless
+        run: npm test -- --no-watch  --browsers=ChromeHeadless
 
       - name: Build code
-        run: ng build
+        run: npm run build
