feat: add Firebase deployment configuration and update workflow for deployment

--- a/.github/workflows/test-1.yml
+++ b/.github/workflows/test-1.yml
@@ -19,3 +19,10 @@ jobs:
 
       - name: Build code
         run: npm run build
+
+      - name: Deploy to Firebase 🔥
+        uses: w9jds/firebase-action@master
+        with:
+            args: deploy --only hosting
+        env:
+            FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
