--- a/.github/workflows/CI-CD Pipeline.yml
+++ b/.github/workflows/CI-CD Pipeline.yml
@@ -12,7 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '22'
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
@@ -25,26 +31,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '22'
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build code
         run: npm run build
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-files
+          path: dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build code
-        run: npm run build
+      - name: Download build artifacts
+        uses: actions/download-artifact@v5
+        with:
+          name: build-files
+          path: dist
 
       - name: Deploy to Firebase 🔥
         uses: w9jds/firebase-action@master
