--- a/.github/workflows/CI-CD Pipeline.yml
+++ b/.github/workflows/CI-CD Pipeline.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Get code
         uses: actions/checkout@v6
 
+      - name: Print User Info
+        run: |
+          echo "This workflow was triggered by: ${{ github.actor }}"
+          echo "They pushed to branch: ${{ github.ref_name }}"
+
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
